# omni_hc

./: .gitignore  AGENTS.md  Darcy.md  DarcyHelmholtz.md  Pipe_Visual.py  README.md  darcy_darcy_defect_correction_s10_Transolver.o2762569  darcy_transformers_final.o2745533  darcy_transformers_final.o2746221  debug_darcy_flux.py  debug_darcy_helmholtz.py  navier_stokes_mean_correction_transformers_final.o2727923  navier_stokes_mean_correction_transformers_final.o2729455  navier_stokes_mean_correction_transformers_final.o2734341  navier_stokes_mean_correction_transformers_final.o2735747  navier_stokes_mean_correction_transformers_final.o2740917  ns_ONO_engineered.o2810932  pyproject.toml
configs/: README.md
configs/backbones/: FNO.yaml  (+1 more)
docs/: README.md  architecture.md  presentation.md
notebooks/: airfoil.py  darcy.py  elasticity.py  navier_stokes.py  pipe.py  plasticity.py
scripts/: batch_train.py  batch_tune.py  colab.ipynb  diagnose.py  inspect_pipe_inlet_gaussian.py  inspect_pipe_stream_function.py  optuna_ns_demo.py  run_batch.sh  test.py  test_ns_demo.py  train.py  train_ns_demo.py  tune.py
scripts/hpc/: gpu.pbs  (+10 more)
tests/: README.md  test_benchmark_runtime.py  test_boundary.py  test_boundary_maps.py  test_checkpoint_summary.py  test_config_composition.py  test_constraint_config_wiring.py  test_darcy_correction.py  test_darcy_flux.py  test_dynamic_component_metrics.py  test_elasticity.py  test_logging_utils.py  test_mean.py  test_metrics.py  test_plasticity_mesh_consistency.py  test_reporting.py  test_reproducibility.py  test_sine_boundary.py  test_stream.py
(+335 files in other folders)
